<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/biru"
    tools:context=".PredictionActivity">

    <TextView
        android:id="@+id/waktu_prediksi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/waktu"
        android:textColor="@color/login"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/waktu_prediksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contoh_tanggal"
        android:textColor="@color/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/waktu_prediksi_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/waktu_prediksi_title"
        app:layout_constraintTop_toBottomOf="@+id/waktu_prediksi_title" />

    <TextView
        android:id="@+id/lokasi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokasi"
        android:textColor="@color/login"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/waktu_prediksi"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/waktu_prediksi"
        app:layout_constraintTop_toBottomOf="@+id/waktu_prediksi"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/lokasi_hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contoh_lokasi"
        android:textColor="@color/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/lokasi_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lokasi_title"
        app:layout_constraintTop_toBottomOf="@+id/lokasi_title" />

    <LinearLayout
        android:id="@+id/parameter_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bg_parameter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433">

        <TextView
            android:id="@+id/temperatur_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatur"
            android:textColor="@color/login"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/temperatur_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/contoh_angka"
            android:textColor="@color/login"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/kelembaban_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelembaban"
            android:textColor="@color/login"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/kelembaban_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/contoh_angka"
            android:textColor="@color/login"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/curah_hujan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curah_hujan"
            android:textColor="@color/login"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/curah_hujan_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/contoh_angka"
            android:textColor="@color/login"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sinar_matahari_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lama_penyinaran"
            android:textColor="@color/login"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sinar_matahari_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/contoh_angka"
            android:textColor="@color/login"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/kecepatan_angin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kecepatan_angin"
            android:textColor="@color/login"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/kecepatan_angin_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/contoh_angka"
            android:textColor="@color/login"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/prediksi_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897">

        <TextView
            android:id="@+id/prediksi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:shadowColor="@color/gray"
            android:shadowRadius="5"
            android:text="@string/prediksi"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/prediksi_hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:shadowColor="@color/gray"
            android:shadowRadius="5"
            android:text="@string/none"
            android:textColor="@color/white"
            android:textSize="50sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>